<resources>
    <string name="app_name">Yobidashi</string>
    <string name="leak_canary_display_activity_label">Yobidashi_Leak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_category_web">DuckDuckGo</string>
    <string name="search_category_image">Image</string>
    <string name="search_category_map">Map</string>
    <string name="search_category_apps">Apps</string>
    <string name="search_category_twitter">Twitter</string>
    <string name="search_category_facebook">Facebook</string>
    <string name="search_category_instagram">Instagram</string>
    <string name="search_category_youtube">Video</string>
    <string name="search_category_wikipedia">Wikipedia</string>
    <string name="search_category_internet_archive">Internet Archive</string>
    <string name="search_category_shopping">Shopping</string>
    <string name="search_category_stack_overflow">Stack Overflow</string>
    <string name="search_category_technology">TechCrunch</string>
    <string name="search_category_github">GitHub</string>
    <string name="search_category_mvnrepository">MvnRepository</string>
    <string name="search_category_grep_code">GrepCode</string>
    <string name="search_category_yandex">Yandex</string>
    <string name="search_category_yahoo">Yahoo!</string>
    <string name="search_category_yahoo_japan">Yahoo! JAPAN</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="display">Display</string>
    <string name="image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="select">Select</string>
    <string name="title_search_action">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_search">Web Search</string>
    <string name="title_section_settings_this_app">This apps Settings</string>
    <string name="title_settings_color">Color Settings</string>
    <string name="title_settings_device">Device Settings</string>
    <string name="title_settings">App Settings</string>
    <string name="title_settings_locale">Locale Settings</string>
    <string name="title_section_device_settings">Device Settings</string>
    <string name="title_settings_wifi">Wi-Fi Settings</string>
    <string name="title_settings_wireless">Wireless Settings</string>
    <string name="title_settings_all_apps">All Apps Settings</string>
    <string name="title_menu">Menu</string>
    <string name="title_tools">Tools</string>
    <string name="title_set_bg">Set Background Image</string>
    <string name="title_bg_reset">Reset Background Image</string>
    <string name="section_title_share">Share</string>
    <string name="title_share">Share this app</string>
    <string name="title_share_twitter">Share by Twitter</string>
    <string name="title_enable_suggestion">Use search input suggestion</string>
    <string name="title_clear_settings">Clear Settings</string>
    <string name="title_advertisement_1">A</string>
    <string name="title_advertisement_2">D</string>
    <string name="title_licenses">Licenses Information</string>
    <string name="title_app_version">App Version: </string>
    <string name="settings_color_commit">Commit</string>
    <string name="settings_color_reset">Reset</string>
    <string name="settings_color_background_title">Background</string>
    <string name="settings_color_font_title">Font</string>
    <string name="settings_color_saved_title">Saved Colors</string>
    <string name="title_clear_saved_color">Delete All</string>
    <string name="settings_color_delete">It has been done!</string>
    <string name="settings_color_done_commit">It has set selected color.</string>
    <string name="settings_color_done_reset">It has reset color.</string>
    <string name="done_clear">It has been done!</string>
    <string name="confirm_clear_all_settings">
        <![CDATA[<font color=\"red\">Caution: This operation cannot undo.</font>]]></string>
    <string name="message_share">
        Search App for Android "{0}"\nhttps://play.google.com/store/apps/details?id=jp.toastkid.yobidashi
    </string>
    <string name="message_failed_read_image">It failed loading image.</string>
    <string name="message_success_image_removal">It has removed current image.</string>
    <string name="message_failed_image_removal">It failed removal.</string>
    <string name="message_cannot_found_image">It failed removal, because image had not been set.</string>
    <string name="message_done_set_image">It has set selected image to backgrounds.</string>
    <string name="format_date_title">{0} {1}</string>
    <string name="format_date_link">https://en.wikipedia.org/wiki/{0}_{1}</string>
    <string name="production_app_admob_id">ca-app-pub-5751262573448755~1704109822</string>
    <string name="unit_id_interstitial">ca-app-pub-5751262573448755/4657576229</string>
    <string name="unit_id_banner_ad">ca-app-pub-5751262573448755/3489764085</string>
    <string name="copyright">(c) @toastkidjp</string>
    <string name="clear_all">Clear All</string>
    <string name="add_background_image">Add Background Image</string>
    <string name="message_change_background_image">It has changed background image.</string>
    <string name="title_background_image_setting">Background Image Setting</string>
    <string name="message_reset_bg_image">It has reset background image.</string>
    <string name="title_ad">Ad</string>
    <string name="title_loading_ad">Loading...</string>
    <string name="thank_you_for_using">Thank you for using!</string>
    <string name="title_about_this_app">About this app</string>
    <string name="message_introduce_ad">Show AD</string>
    <string name="message_about_this_app">
        This app provide Web Search and many functions.\n
        \n
        | Search experience\n
        1. Favorite search……You could save pair of search site and keyword.\n
        2. Many search sites.……Google, Bing, DuckDuckGo, Yelp, and so on...\n
        3. App widget……You could set app-widget on home area or notification area.\n
        \n
        | Many functions\n
        1. Web Search\n
        2. Barcode Reader\n
        3. App Launcher\n
        4. Simple Tab Browser\n
        5. Calendar\n
        6. Planning Poker\n
        7. Screen filter\n
        8. Editor in browser\n
        9. Torch\n
        \n
        | Customize\n
        1. Toolbar coloring\n
        2. Background image\n
        3. Default search site\n
        4. Start-up activity\n
        \n
        \n
        Resources\n
        I have used icons which are owned by "Icon Rainbow (https://icon-rainbow.com/)".\n
        \n
        - インターネットでの検索アイコン 1: https://icon-rainbow.com/インターネットでの検索アイコン 1/\n
        - サイト内検索のアイコン素材: https://icon-rainbow.com/サイト内検索のアイコン素材/\n
    </string>
    <string name="message_done_load_ad">It has done loading AD!</string>
    <string name="message_failed_ad_loading">It failed to load AD...</string>
    <string name="title_add_recommended_colors">Add recommended colors</string>
    <string name="done_addition">It has done addition!</string>
    <string name="message_add_recommended_colors">Would you like to add recommended colors?</string>
    <string name="title_add_random">Random</string>
    <string name="title_go_google_play">Check update</string>
    <string name="section_title_about_this_app">This app\'s information</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>
    <string name="message_please_view_ad">Please could you bear to see interstitial ad...</string>
    <string name="app_widget_name_search">Web Search App-Widget</string>
    <string name="app_widget_search">Search</string>
    <string name="title_daily_notification">Daily notification at 8:00 a.m.</string>
    <string name="subtext_notification">Do you know what happened this day?</string>
    <string name="message_set_daily_alarm">It has set daily alarm.</string>
    <string name="message_clear_daily_alarm">It has canceled daily alarm.</string>
    <string name="title_settings_date_and_time">Date and Time Settings</string>
    <string name="title_apps_launcher">Apps Launcher</string>
    <string name="message_failed_launching">It cannot launch this app.</string>
    <string name="date_format">E, MM/dd/yyyy HH:mm:ss</string>
    <string name="last_saved">"Last saved:\n"</string>
    <string name="editor_date_format">HH:mm:ss</string>
    <string name="title_package_name_filter">Package name filter</string>
    <string name="top_mark">↑</string>
    <string name="bottom_mark">↓</string>
    <string name="title_favorite_search">Favorite Search</string>
    <string name="exit">Exit</string>
    <string name="title_browser">Browser</string>
    <string name="title_planning_poker">Planning Poker</string>
    <string name="back">Back</string>
    <string name="title_menu_reload">Reload</string>
    <string name="title_menu_to_top">Go top</string>
    <string name="title_menu_to_bottom">Go bottom</string>
    <string name="title_menu_forward">Forward</string>
    <string name="title_menu_page_information">Page information</string>
    <string name="subhead_others">Others</string>
    <string name="subhead_notification">Notifications</string>
    <string name="title_code_reader">Barcode Reader</string>
    <string name="title_share_by_code">Share Barcode</string>
    <string name="title_user_agent">User Agent</string>
    <string name="title_screenshot">Screenshot</string>
    <string name="title_screenshots">Screenshots</string>
    <string name="title_instant_barcode">Generate barcode</string>
    <string name="title_open_url">Open URL</string>
    <string name="title_archive">Archive this page</string>
    <string name="title_archives">Archives</string>
    <string name="title_color_filter">Overlay Color Filter</string>
    <string name="title_site_search_by_google">Site Search by Google</string>
    <string name="title_voice_search">Voice Search</string>
    <string name="title_search_history">Search history</string>
    <string name="title_use_search_history">Use search history</string>
    <string name="title_tab_list">Tab list</string>
    <string name="title_find_in_page">Find in page</string>
    <string name="subhead_search">Search</string>
    <string name="subhead_browser">Browser</string>
    <string name="title_load_home">Load home page</string>
    <string name="title_replace_home">Replace home page</string>
    <string name="title_view_history">Browser History</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_clear_bookmark">Clear All Bookmarks</string>
    <string name="title_add_bookmark">Add bookmark</string>
    <string name="title_add_default_bookmark">Add default bookmarks</string>
    <string name="title_tab_histories">Tab histories</string>
    <string name="title_header_and_footer">Header &amp; Footer</string>
    <string name="title_screen_mode_full">Full screen</string>
    <string name="title_screen_mode_expandable">Expandable</string>
    <string name="title_screen_mode_fixed">Fixed</string>
    <string name="title_editor">Text Editor</string>
    <string name="title_torch">Torch</string>
    <string name="title_stop_loading">Stop loading</string>
    <string name="title_open_pdf">Open PDF</string>
    <string name="paste_as_quotation">Paste as Quotation</string>
    <string name="subhead_editor">Editor</string>
    <string name="reset_button_position">Reset Button Position</string>
    <string name="insert_as_plain">Insert as plain</string>
    <string name="title_context_editor_double_quote">Double quote</string>
    <string name="horizontal_rule">Horizontal rule</string>
</resources>