<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_list"
        android:title="@string/title_tab_list"
        android:icon="@drawable/ic_tab"
        />
    <item
        android:id="@+id/stop_loading"
        android:title="@string/title_stop_loading"
        android:icon="@drawable/ic_close"
        />
    <item
        android:id="@+id/tab_history"
        android:title="@string/title_tab_histories"
        android:icon="@drawable/ic_history"
        />
    <item
        android:id="@+id/to_top"
        android:title="@string/title_menu_to_top"
        android:icon="@drawable/ic_top"
        />
    <item
        android:id="@+id/to_bottom"
        android:title="@string/title_menu_to_bottom"
        android:icon="@drawable/ic_bottom"
        />
    <item
        android:id="@+id/back"
        android:title="@string/back"
        android:icon="@drawable/ic_back"
        />
    <item
        android:id="@+id/forward"
        android:title="@string/title_menu_forward"
        android:icon="@drawable/ic_forward"
        />
    <item
        android:id="@+id/reload"
        android:title="@string/title_menu_reload"
        android:icon="@drawable/ic_reload"
        />
    <item
        android:id="@+id/page_information"
        android:title="@string/title_menu_page_information"
        android:icon="@drawable/ic_info"
        />
    <item
        android:id="@+id/user_agent"
        android:title="@string/title_user_agent"
        android:icon="@drawable/ic_user_agent"
        />
    <item
        android:id="@+id/wifi"
        android:title="@string/title_settings_wifi"
        android:icon="@drawable/ic_wifi"
        />
    <item
        android:id="@+id/open_url"
        android:title="@string/title_open_url"
        android:icon="@drawable/ic_web"
        />
    <item
        android:id="@+id/open_other"
        android:title="@string/title_open_other_browser"
        android:icon="@drawable/ic_open_with"
        />
    <item
        android:id="@+id/find_in_page"
        android:title="@string/title_find_in_page"
        android:icon="@drawable/ic_find_in_page"
        />
    <item
        android:id="@+id/screenshot"
        android:title="@string/title_screenshot"
        android:icon="@drawable/ic_camera"
        />
    <item
        android:id="@+id/archive"
        android:title="@string/title_archive"
        android:icon="@drawable/ic_archive"
        />
    <item
        android:id="@+id/share"
        android:title="@string/section_title_share"
        android:icon="@drawable/ic_share"
        />
    <item
        android:id="@+id/share_by_code"
        android:title="@string/title_share_by_code"
        android:icon="@drawable/ic_barcode"
        />
    <item
        android:id="@+id/replace_home"
        android:title="@string/title_replace_home"
        android:icon="@drawable/ic_replace_home"
        />
    <item
        android:id="@+id/load_home"
        android:title="@string/title_load_home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/search"
        android:title="@string/title_search_action"
        android:icon="@drawable/ic_search_white"
        />
    <item
        android:id="@+id/voice_search"
        android:title="@string/title_voice_search"
        android:icon="@drawable/ic_mic"
        />
    <item
        android:id="@+id/site_search"
        android:title="@string/title_site_search_by_google"
        android:icon="@drawable/ic_google"
        />
    <item
        android:id="@+id/view_history"
        android:title="@string/title_view_history"
        android:icon="@drawable/ic_history"
        />
    <item
        android:id="@+id/add_bookmark"
        android:title="@string/title_add_bookmark"
        android:icon="@drawable/ic_bookmark"
        />
    <item
        android:id="@+id/editor"
        android:title="@string/title_editor"
        android:icon="@drawable/ic_edit"
        />
    <item
        android:id="@+id/pdf"
        android:title="@string/title_open_pdf"
        android:icon="@drawable/ic_pdf"
        />
    <item
        android:id="@+id/setting"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"
        />
</menu>