<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        />

    <item android:title="@string/title_search">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/title_search_action"
                />
            <item
                android:id="@+id/nav_search_history"
                android:icon="@drawable/ic_history_black"
                android:title="@string/title_search_history"
                />
            <item
                android:id="@+id/nav_favorite_search"
                android:icon="@drawable/ic_favorite"
                android:title="@string/title_favorite_search"
                />
        </menu>
    </item>

    <item android:title="@string/title_browser">
        <menu>
            <item
                android:id="@+id/nav_browser"
                android:icon="@drawable/ic_web_black"
                android:title="@string/title_browser"
                />
            <item
                android:id="@+id/nav_bookmark"
                android:icon="@drawable/ic_bookmark_black"
                android:title="@string/title_bookmark"
                />
            <item
                android:id="@+id/nav_view_history"
                android:icon="@drawable/ic_history_black"
                android:title="@string/title_view_history"
                />
            <item
                android:id="@+id/nav_archives"
                android:icon="@drawable/ic_archive"
                android:title="@string/title_archives"
                />
            <item
                android:id="@+id/nav_screenshots"
                android:icon="@drawable/ic_camera_black"
                android:title="@string/title_screenshots"
                />
        </menu>
    </item>

    <item android:title="@string/title_tools">
        <menu>
            <item
                android:id="@+id/nav_torch"
                android:icon="@drawable/ic_light"
                android:title="@string/title_torch"
                />
            <item
                android:id="@+id/nav_barcode"
                android:icon="@drawable/ic_barcode_black"
                android:title="@string/title_code_reader"
                />
            <item
                android:id="@+id/nav_instant_barcode"
                android:icon="@drawable/ic_barcode_black"
                android:title="@string/title_instant_barcode"
                />
            <item
                android:id="@+id/nav_color_filter"
                android:icon="@drawable/ic_color_filter_black"
                android:title="@string/title_color_filter"
                />
            <item
                android:id="@+id/nav_launcher"
                android:icon="@drawable/ic_launch_black"
                android:title="@string/title_apps_launcher"
                />
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar_black"
                android:title="@string/title_calendar"
                />
            <item
                android:id="@+id/nav_planning_poker"
                android:icon="@drawable/ic_card_black"
                android:title="@string/title_planning_poker"
                />
            <item
                android:id="@+id/nav_tweet"
                android:icon="@drawable/ic_tweet_black"
                android:title="@string/title_tweet_action"
                />
        </menu>
    </item>

    <item android:title="@string/section_title_share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/title_share"
                />
            <item
                android:id="@+id/nav_share_twitter"
                android:icon="@drawable/ic_sns"
                android:title="@string/title_share_twitter"
                />
        </menu>
    </item>

    <item android:title="@string/section_title_about_this_app">
        <menu>
            <item
                android:id="@+id/nav_about_this_app"
                android:icon="@drawable/ic_yobidashi"
                android:title="@string/title_about_this_app"
                />

            <item
                android:id="@+id/nav_google_play"
                android:icon="@drawable/ic_store_black"
                android:title="@string/title_go_google_play"
                />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/privacy_policy"
                />
            <item
                android:id="@+id/nav_author"
                android:title="@string/copyright"
                />
        </menu>
    </item>

</menu>
