<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/subhead_search"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_browser"
        android:title="@string/subhead_browser"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_editor"
        android:title="@string/subhead_editor"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_notification"
        android:title="@string/subhead_notification"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_other"
        android:title="@string/subhead_others"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>