<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reset_menu_position"
        android:title="@string/reset_button_position"
        android:checkable="false"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/setting"
        android:orderInCategory="200"
        android:title="@string/title_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/open_tabs"
        android:title="@string/title_tab_list"
        android:checkable="false"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
</menu>