<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        android:title="@string/title_clear_bookmark"
        android:checkable="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/add_default"
        android:orderInCategory="100"
        android:title="@string/title_add_default_bookmark"
        android:checkable="false"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/to_top"
        android:orderInCategory="100"
        android:title="@string/top_mark"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/to_bottom"
        android:orderInCategory="101"
        android:title="@string/bottom_mark"
        app:showAsAction="never"
        />
</menu>
