<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/double_quote"
        android:orderInCategory="100"
        android:title="@string/title_context_editor_double_quote"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_default_search_category"
        android:orderInCategory="100"
        android:title="@string/title_context_editor_set_default_search_category"
        app:showAsAction="never" />
    <item
        android:id="@+id/suggestion_check"
        android:orderInCategory="100"
        android:title="@string/title_enable_suggestion"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/history_check"
        android:orderInCategory="100"
        android:title="@string/title_use_search_history"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_favorite_search"
        android:orderInCategory="100"
        android:title="@string/title_favorite_search"
        android:checkable="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_search_history"
        android:orderInCategory="100"
        android:title="@string/title_search_history"
        android:checkable="false"
        app:showAsAction="never" />
</menu>
