<?xml version="1.0" encoding="utf-8"?>
<layout>
    <merge
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:parentTag="LinearLayout"
        tools:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_fullscreen_black"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/title_header_and_footer"
            />
        <RadioGroup
            android:id="@+id/screen_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            >
            <RadioButton
                android:id="@+id/full_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_transparent"
                android:text="@string/title_screen_mode_full"
                />
            <RadioButton
                android:id="@+id/expandable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_transparent"
                android:text="@string/title_screen_mode_expandable"
                />
            <RadioButton
                android:id="@+id/fixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_transparent"
                android:text="@string/title_screen_mode_fixed"
                />
        </RadioGroup>
    </merge>
</layout>