<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="fragment" type="jp.toastkid.yobidashi.about.AboutThisAppFragment" />
    </data>
    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/about_scroll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c6"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/filter_white_bb"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/message_about_this_app"
                android:textSize="16sp"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:drawableLeft="@drawable/ic_store_black"
                android:gravity="center_vertical"
                android:text="@string/title_go_google_play"
                android:textSize="16sp"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> fragment.checkUpdate()}"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:drawableLeft="@drawable/ic_privacy"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy"
                android:textSize="16sp"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{iew -> fragment.privacyPolicy()}"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/licenses"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:drawableLeft="@drawable/ic_license_black"
                android:gravity="center_vertical"
                android:text="@string/title_licenses"
                android:textSize="16sp"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{fragment::licenses}"
                />

            <include layout="@layout/primary_dark_divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_transparent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/settings_item_left_margin"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/title_app_version"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/settings_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/settings_item_left_margin"
                    android:layout_gravity="center_vertical|right"
                    android:textSize="16sp"
                    />
            </FrameLayout>

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:gravity="center"
                android:background="@drawable/ripple_soft"
                android:text="@string/copyright"
                android:onClick="@{view -> fragment.aboutAuthorApp()}"
                />

            <include layout="@layout/primary_dark_divider" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>